# pollutionAnalizerWebsite

./: CMakeLists.txt  README.MD  app.js  main.cpp  main.js  vcpkg.json
Routes/: Routes.cpp  Routes.h  home.h  imgRequest.h  macros.h
assets/: effetti.html  home.css  home.html  home.js  inquinamento.css  inquinamento.html  inquinamento.js  sitorafia.html  sostanze_inquinanti.html
files/: home.css  home.html  home.js
